--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Test
         run: dotnet test --no-build --verbosity normal
       - name: Build docker images
-        run: docker compose up
+        run: docker-compose up
