--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,8 @@ services:
             dockerfile: recipe-rating-service/Dockerfile
         depends_on:
             - "rating-database"
-            - "rabbitmq"
+            - "rabbitmq":
+                condition: service_healthy
         environment:
             DB_CONNECTION_STRING: "host=rating-database;port=5432;database=ratingdb;username=test;password=test"
     rabbitmq:
@@ -67,6 +68,11 @@ services:
         ports:
             - 5672:5672
             - 15672:15672
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:15672"]
+            interval: 30s
+            timeout: 10s
+            retries: 5
     
 volumes:
     dataRecipe:
