--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Test
         run: dotnet test --no-build --verbosity normal
 
-      - name: Build docker images
-        run: docker-compose up --build
+      # - name: Build docker images
+      #   run: docker-compose up --build
