--- a/.github/workflows/recipe-read-service.yml
+++ b/.github/workflows/recipe-read-service.yml
@@ -42,4 +42,4 @@ jobs:
         with:
           push: true
           tags: docker.pkg.github.com/florencevds/kruiml/recipereadservice:latest
-          file: ../../recipe-read-service/recipe-read-service/Dockerfile
+          file: ../../recipe-read-service
