try fix context

--- a/.github/workflows/recipe-read-service.yml
+++ b/.github/workflows/recipe-read-service.yml
@@ -42,5 +42,5 @@ jobs:
         with:
           push: true
           tags: docker.pkg.github.com/florencevds/kruiml/recipereadservice:latest
-          context: ../../recipe-read-service
+          context: recipe-read-service
           file: ../../recipe-read-service/recipe-read-service/Dockerfile
