--- a/.github/workflows/recipe-read-service.yml
+++ b/.github/workflows/recipe-read-service.yml
@@ -27,7 +27,7 @@ jobs:
         working-directory: recipe-read-service
 
   test:
-    runs on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Test
@@ -35,7 +35,7 @@ jobs:
         working-directory: recipe-read-service
 
   docker:
-    runs on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Log in to Github Docker Registry
