--- a/.github/workflows/recipe-rating-service.yml
+++ b/.github/workflows/recipe-rating-service.yml
@@ -39,6 +39,10 @@ jobs:
         run: dotnet test --no-build --verbosity normal
         working-directory: recipe-rating-service
 
+  docker:
+    runs-on: ubuntu-latest
+
+    steps:
       - name: Log in to Github Docker Registry
         uses: docker/login-action@v1
         with:
