try deploy kubernetes

--- a/.github/workflows/recipe-read-service.yml
+++ b/.github/workflows/recipe-read-service.yml
@@ -55,4 +55,4 @@ jobs:
           tags: docker.pkg.github.com/florencevds/kruiml/recipereadservice:latest
 
       - name: Deploy kubernetes
-        run: kubectl apply -f recipe-read-service.yaml
+        run: kubectl apply -f ././recipe-read-service/k8s/recipe-read-service.yaml
