--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,7 +70,7 @@ stages:
               kubernetesCluster: 'kruimlCluster'
               command: 'apply'
               useConfigurationFile: true
-              configuration: k8s/recipe-read-service.yaml
+              configuration: recipe-read-service.yaml
               secretType: 'dockerRegistry'
               containerRegistryType: 'Azure Container Registry'
 
