--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,7 +69,7 @@ stages:
               azureResourceGroup: 'kruimlResourceGroup'
               kubernetesCluster: 'kruimlCluster'
               command: 'apply'
-              arguments: '-f recipe-read-service.yaml'
+              arguments: '-f recipe-read-service/recipe-read-service.yaml'
               secretType: 'dockerRegistry'
               containerRegistryType: 'Azure Container Registry'
 
