--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,15 +48,13 @@ stages:
         tags: |
           $(tag)
 
-    - task: PublishPipelineArtifact@1
+    - task: Kubernetes@1
       inputs:
-        artifactName: 'manifests'
-        path: 'manifests'
-
-    - task: KubernetesManifest@0
-      inputs:
-        action: 'deploy'
-        kubernetesServiceConnection: 'kruimlCluster-default'
-        manifests: '$(System.ArtifactsDirectory)/recipe-read-service/recipe-read-service.yaml'
-        containers: '$(containerRegistry)/$(imageRepository):$(tag)'
-        imagePullSecrets: '$(imagePullSecret)'
+        connectionType: 'Azure Resource Manager'
+        azureSubscriptionEndpoint: 'Azure for Students(22fae281-192f-4d7e-a431-690531f59669)'
+        azureResourceGroup: 'kruimlResourceGroup'
+        kubernetesCluster: 'kruimlCluster'
+        command: 'apply'
+        arguments: '-f recipe-read-service.yaml'
+        secretType: 'dockerRegistry'
+        containerRegistryType: 'Azure Container Registry'
