--- a/recipe-read-service/recipe-read-service.yaml
+++ b/recipe-read-service/recipe-read-service.yaml
@@ -22,6 +22,8 @@ spec:
           env:
             - name: DB_CONNECTION_STRING
               value: 'host=recipe-database;port=5432;database=recipedb;username=test;password=test'
+      imagePullSecrets:
+        - name: 'kruimlcontainerregister3c34-auth'
 ---
 apiVersion: v1
 kind: Service
