--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "keycloak-js": "^13.0.1",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.2.0",
